--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,7 @@
   },
   "parser": "babel-eslint",
   "rules": {
+    "import/no-unresolved": [0],
     "class-methods-use-this": [0],
     "prettier/prettier": [2],
     "react/jsx-filename-extension": [
