--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.0",
+    "recompose": "^0.30.0",
     "redux": "^4.0.4",
     "redux-api-middleware": "^3.0.1",
     "redux-devtools-extension": "^2.13.8",
