--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "classnames": "^2.2.6",
     "css-loader": "^3.2.0",
     "mini-css-extract-plugin": "^0.8.0",
     "postcss-import": "^12.0.1",
